<resources>
    <string name="app_name">LetsStudy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_signin">Sign In</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_retype_password">Password is not match</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="profile_title">Profile</string>
    <string name="words">Words</string>
    <string name="lession">Lession</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <string name="update_profile">Update Profile</string>
    <string name="hint_old_password">Old Password</string>
    <string name="done">Done</string>
    <string name="title_activity_words_list">WordsListActivity</string>
    <string name="words_list_title">Words list</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="categories_title">Categories</string>
    <string name="err_msg_old_password">oldpassword is not match</string>
    <string name="title_activity_test_lession">TestLession</string>

</resources>
