<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:textSize="@dimen/title_size"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="@dimen/image_profile_width"
                android:layout_height="@dimen/image_profile_height"
                android:src="@drawable/ic_person_white_24dp"/>

            <LinearLayout
                android:id="@+id/information_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/profile_picture"
                android:layout_alignBottom="@+id/profile_picture"
                android:layout_alignTop="@+id/profile_picture">

                <LinearLayout
                    android:id="@+id/name_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/name_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person_white_24dp"/>

                    <TextView
                        android:id="@+id/name_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/email_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/email_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mail_white_24dp"/>

                    <TextView
                        android:id="@+id/email_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/history_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/document_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_description_white_24dp"/>

                    <TextView
                        android:id="@+id/document_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="learned 120 word"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/normal_padding"
            android:layout_marginBottom="@dimen/button_layout_margin_bottom">

            <Button
                android:id="@+id/btn_words"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:textColor="@android:color/white"
                android:text="@string/words"
                android:elevation="@dimen/button_elevation"
                android:layout_marginRight="@dimen/normal_padding"
                android:onClick="onClickWords"/>

            <Button
                android:id="@+id/btn_lesson"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:textColor="@android:color/white"
                android:text="@string/lession"
                android:elevation="@dimen/button_elevation"
                android:onClick="onClickLession"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/floating_action_button_margin"
        android:clickable="true"
        android:src="@drawable/ic_create_white_24dp"
        app:elevation="@dimen/floating_action_button_elevation"
        app:layout_anchor="@id/profile_layout"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>